--- a/index.html
+++ b/index.html
@@ -1283,7 +1283,7 @@
       <div class="container hero-content">
         <div class="hero-badge">
           <i class="fa-solid fa-circle-dot"></i>
-          Agence digitale premium · Kinshasa, RDC
+          Agence digitale premium · RDC
         </div>
 
         <h1 class="hero-title">
@@ -1939,7 +1939,7 @@
 
           <div class="team-card reveal">
             <!-- IMAGE: Photo of Betsaleel Yoto -->
-            <img src="https://picsum.photos/seed/team1/200/200" alt="Betsaleel Yoto" class="team-avatar" loading="lazy" />
+            <img src="https://avatars.githubusercontent.com/u/147883505?v=4" alt="Betsaleel Yoto" class="team-avatar" loading="lazy" />
             <h3>Betsaleel Yoto</h3>
             <p>CEO & Stratégie Digitale</p>
             <span class="team-role-badge">Leadership</span>
@@ -1947,23 +1947,23 @@
 
           <div class="team-card reveal reveal-delay-1">
             <!-- IMAGE: Photo of Sarah Laurent Nkulu -->
-            <img src="https://picsum.photos/seed/team2/200/200" alt="Sarah Laurent Nkulu" class="team-avatar" loading="lazy" />
-            <h3>Sarah Laurent Nkulu</h3>
-            <p>Directrice Design & UX</p>
+            <img src="https://images.pexels.com/photos/8370864/pexels-photo-8370864.jpeg" alt="Sarah Laurent Nkulu" class="team-avatar" loading="lazy" />
+            <h3>Thomas Nkulu</h3>
+            <p>Directeur Design & UX</p>
             <span class="team-role-badge">Design</span>
           </div>
 
           <div class="team-card reveal reveal-delay-2">
             <!-- IMAGE: Photo of Patrick Kabongo -->
-            <img src="https://picsum.photos/seed/team3/200/200" alt="Patrick Kabongo" class="team-avatar" loading="lazy" />
-            <h3>Patrick Kabongo</h3>
+            <img src="https://images.pexels.com/photos/3769021/pexels-photo-3769021.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Patrick Kabongo" class="team-avatar" loading="lazy" />
+            <h3>Marie Kabongo</h3>
             <p>Lead Développeur</p>
             <span class="team-role-badge">Tech</span>
           </div>
 
           <div class="team-card reveal reveal-delay-3">
             <!-- IMAGE: Photo of Mariane Ilunga -->
-            <img src="https://picsum.photos/seed/team4/200/200" alt="Mariane Ilunga" class="team-avatar" loading="lazy" />
+            <img src="https://images.pexels.com/photos/3894379/pexels-photo-3894379.jpeg" alt="Mariane Ilunga" class="team-avatar" loading="lazy" />
             <h3>Mariane Ilunga</h3>
             <p>Chef de Projet</p>
             <span class="team-role-badge">Management</span>
@@ -2043,7 +2043,7 @@
 
       <div class="footer-bottom">
         <span>© 2026 DigistartExpress. Tous droits réservés.</span>
-        <span>Fait avec <span style="color:var(--accent)">♥</span> à Kinshasa, RDC</span>
+        <span>Fait <span style="color:var(--accent)"></span> en RDC</span>
       </div>
     </div>
   </footer>
