--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@
   <!-- HERO RDC -->
   <section id="hero">
     <div class="hero-bg">
-      <video class="hero-video" id="heroVideo" muted playsinline preload="auto" loop>
-        <source src="/852421-hd_1920_1080_30fps.mp4" type="video/mp4" />
+      <video class="hero-video" id="heroVideo" muted playsinline preload="auto">
+        <source src="./852421-hd_1920_1080_30fps.mp4" type="video/mp4" />
       </video>
     </div>
     <div class="hero-overlay"></div>
@@ -743,8 +743,8 @@
   ============================================================ -->
   <section id="hero">
     <div class="hero-bg">
-      <video class="hero-video" id="heroVideoIntl" muted playsinline preload="auto" loop>
-        <source src="https://videos.pexels.com/video-files/852421/852421-hd_1920_1080_25fps.mp4" type="video/mp4" />
+      <video class="hero-video" id="heroVideoIntl" muted playsinline preload="auto">
+        <source src="./852421-hd_1920_1080_30fps.mp4" type="video/mp4" />
       </video>
     </div>
     <div class="hero-overlay"></div>
@@ -1330,7 +1330,7 @@
         <div class="footer-logo">Digistart<span>Express</span></div>
         <p>Solutions digitales premium sur-mesure pour l'Afrique et l'Europe francophone. Parce que votre ambition mérite une présence à sa hauteur.</p>
         <div class="footer-contacts">
-          <div class="footer-contact"><i class="fa-solid fa-envelope"></i><span><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="e88b87869c898b9ca88c818f819b9c899a9c8d90989a8d9b9bc68b8785">[email&#160;protected]</a></span></div>
+          <div class="footer-contact"><i class="fa-solid fa-envelope"></i><span><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="e88b87869c898b9ca88c818f819b9c899a9c8d90989a8d9b9bc68b8785">contact@digistartexpress.com</a></span></div>
           <div class="footer-contact"><i class="fa-brands fa-whatsapp"></i><span>+243 98 870 0603</span></div>
           <div class="footer-contact"><i class="fa-solid fa-location-dot"></i><span>Kinshasa · Paris · Dakar · Abidjan</span></div>
         </div>
@@ -1351,60 +1351,62 @@
 <script>
 // ================================================================
 // VIDÉO HERO PILOTÉE PAR LE SCROLL
+// La vidéo avance au scroll, recule à l'anti-scroll.
 // ================================================================
 function initScrollVideo(videoId) {
   var video = document.getElementById(videoId);
   if (!video) return;
 
-  video.pause();
+  var heroSection = video.closest('section');
+  var raf = null;
+  var targetTime = 0;
+  var smoothTime = 0;
 
-  function setup() {
+  // Calcule le ratio de scroll dans le hero
+  function getScrollRatio() {
+    var rect = heroSection.getBoundingClientRect();
+    var scrolled = -rect.top;
+    var total = heroSection.offsetHeight - window.innerHeight;
+    if (total <= 0) total = heroSection.offsetHeight * 0.8;
+    return Math.min(Math.max(scrolled / total, 0), 1);
+  }
+
+  // Interpole et applique currentTime
+  function tick() {
+    smoothTime += (targetTime - smoothTime) * 0.1;
+    if (Math.abs(video.currentTime - smoothTime) > 0.05) {
+      video.currentTime = smoothTime;
+    }
+    if (Math.abs(smoothTime - targetTime) > 0.05) {
+      raf = requestAnimationFrame(tick);
+    } else {
+      raf = null;
+    }
+  }
+
+  function onScroll() {
     if (!video.duration) return;
-    var heroSection = video.closest('section');
-    var ticking = false;
-    var targetTime = 0;
-    var currentTime = 0;
-    var raf = null;
+    targetTime = getScrollRatio() * video.duration;
+    if (!raf) raf = requestAnimationFrame(tick);
+  }
 
-    function lerp(a, b, t) { return a + (b - a) * t; }
-
-    function updateFrame() {
-      currentTime = lerp(currentTime, targetTime, 0.08);
-      if (Math.abs(currentTime - video.currentTime) > 0.01) {
-        video.currentTime = currentTime;
-      }
-      if (Math.abs(currentTime - targetTime) > 0.01) {
-        raf = requestAnimationFrame(updateFrame);
-      } else {
-        raf = null;
-      }
-    }
-
-    function onScroll() {
-      if (ticking) return;
-      ticking = true;
-      requestAnimationFrame(function() {
-        ticking = false;
-        var rect = heroSection.getBoundingClientRect();
-        var heroHeight = heroSection.offsetHeight;
-        var windowH = window.innerHeight;
-        var scrolled = -rect.top;
-        var total = heroHeight - windowH;
-        if (total <= 0) total = heroHeight;
-        var ratio = Math.min(Math.max(scrolled / total, 0), 1);
-        targetTime = ratio * video.duration;
-        if (!raf) raf = requestAnimationFrame(updateFrame);
-      });
-    }
-
+  // Démarre dès que les métadonnées sont disponibles
+  function start() {
+    video.currentTime = 0;
     window.addEventListener('scroll', onScroll, { passive: true });
     onScroll();
   }
 
+  // S'assure que la vidéo est bien en pause (pas d'autoplay)
+  video.autoplay = false;
+  video.addEventListener('play', function() { video.pause(); });
+
   if (video.readyState >= 1) {
-    setup();
+    start();
   } else {
-    video.addEventListener('loadedmetadata', setup);
+    video.addEventListener('loadedmetadata', start, { once: true });
+    // Force le chargement si le navigateur est bloqué
+    video.load();
   }
 }
 
