ajout loc + video

--- a/index.html
+++ b/index.html
@@ -1330,7 +1330,7 @@
         <div class="footer-logo">Digistart<span>Express</span></div>
         <p>Solutions digitales premium sur-mesure pour l'Afrique et l'Europe francophone. Parce que votre ambition mérite une présence à sa hauteur.</p>
         <div class="footer-contacts">
-          <div class="footer-contact"><i class="fa-solid fa-envelope"></i><span><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="e88b87869c898b9ca88c818f819b9c899a9c8d90989a8d9b9bc68b8785">contact@digistartexpress.com</a></span></div>
+          <div class="footer-contact"><i class="fa-solid fa-envelope"></i><span><a href="mailto:contact@digistartexpress.com" class="__cf_email__" data-cfemail="e88b87869c898b9ca88c818f819b9c899a9c8d90989a8d9b9bc68b8785">contact@digistartexpress.com</a></span></div>
           <div class="footer-contact"><i class="fa-brands fa-whatsapp"></i><span>+243 98 870 0603</span></div>
           <div class="footer-contact"><i class="fa-solid fa-location-dot"></i><span>Kinshasa · Paris · Dakar · Abidjan</span></div>
         </div>
