--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
     #hero{position:relative;min-height:100vh;display:flex;align-items:center;overflow:hidden;}
     .hero-bg{position:absolute;inset:0;z-index:0;overflow:hidden;}
     .hero-video{position:absolute;inset:0;width:100%;height:100%;object-fit:cover;object-position:center;pointer-events:none;display:block;}
+    .hero-video-mobile{display:none;}
+    @media(max-width:768px){
+      .hero-video-desktop{display:none;}
+      .hero-video-mobile{display:block;}
+    }
     .hero-overlay{position:absolute;inset:0;background:linear-gradient(135deg,rgba(10,55,118,.93) 0%,rgba(10,55,118,.78) 60%,rgba(60,221,221,.15) 100%);z-index:1;}
     .hero-grid{position:absolute;inset:0;z-index:2;background-image:linear-gradient(rgba(255,255,255,.03) 1px,transparent 1px),linear-gradient(90deg,rgba(255,255,255,.03) 1px,transparent 1px);background-size:60px 60px;}
     .hero-content{position:relative;z-index:3;padding:120px 0 80px;max-width:820px;}
@@ -336,8 +341,11 @@
   <!-- HERO RDC -->
   <section id="hero">
     <div class="hero-bg">
-      <video class="hero-video" id="heroVideo" muted playsinline preload="auto">
+      <video class="hero-video hero-video-desktop" id="heroVideo" muted playsinline preload="auto">
         <source src="./852421-hd_1920_1080_30fps.mp4" type="video/mp4" />
+      </video>
+      <video class="hero-video hero-video-mobile" id="heroVideoMobile" muted playsinline preload="auto">
+        <source src="./5303840-hd_1080_1920_30fps.mp4" type="video/mp4" />
       </video>
     </div>
     <div class="hero-overlay"></div>
@@ -743,8 +751,11 @@
   ============================================================ -->
   <section id="hero">
     <div class="hero-bg">
-      <video class="hero-video" id="heroVideoIntl" muted playsinline preload="auto">
+      <video class="hero-video hero-video-desktop" id="heroVideoIntl" muted playsinline preload="auto">
         <source src="./852421-hd_1920_1080_30fps.mp4" type="video/mp4" />
+      </video>
+      <video class="hero-video hero-video-mobile" id="heroVideoIntlMobile" muted playsinline preload="auto">
+        <source src="./5303840-hd_1080_1920_30fps.mp4" type="video/mp4" />
       </video>
     </div>
     <div class="hero-overlay"></div>
@@ -770,7 +781,7 @@
         <div class="hero-feature"><i class="fa-solid fa-check-circle"></i> Équipe dédiée</div>
       </div>
       <div class="hero-btns">
-        <a href="/cdn-cgi/l/email-protection#5f3c30312b3e3c2b1f3b3638362c2b3e2d2b3a272f2d3a2c2c713c3032" class="btn btn-accent">Parlez-nous de votre projet <i class="fa-solid fa-arrow-right"></i></a>
+        <a href="https://wa.me/243988700603" class="btn btn-accent">Parlez-nous de votre projet <i class="fa-solid fa-arrow-right"></i></a>
         <a href="#portfolio" class="btn btn-outline">Voir nos réalisations</a>
       </div>
     </div>
@@ -825,7 +836,7 @@
           </div>
 
           <div style="margin-top:32px;">
-            <a href="/cdn-cgi/l/email-protection#05666a6b7164667145616c626c7671647771607d75776076762b666a68" class="btn btn-primary">Demander un devis sous 48h <i class="fa-solid fa-arrow-right"></i></a>
+            <a href="mailto:contact@digistartexpress.com" class="btn btn-primary">Demander un devis sous 48h <i class="fa-solid fa-arrow-right"></i></a>
           </div>
         </div>
 
@@ -1002,7 +1013,7 @@
       </div>
     </div>
     <div class="container" style="margin-top:48px;text-align:center;">
-      <a href="/cdn-cgi/l/email-protection#87e4e8e9f3e6e4f3c7e3eee0eef4f3e6f5f3e2fff7f5e2f4f4a9e4e8ea" class="btn btn-primary">Rejoindre nos clients <i class="fa-solid fa-arrow-right"></i></a>
+      <a href="#tarifs" class="btn btn-primary">Rejoindre nos clients <i class="fa-solid fa-arrow-right"></i></a>
     </div>
   </section>
 
@@ -1025,14 +1036,14 @@
         <button class="filter-btn" data-filter="btp">BTP</button>
       </div>
       <div class="portfolio-grid">
-        <div class="portfolio-item reveal" data-category="it"><img src="https://res.cloudinary.com/dlkow85gp/image/upload/v1768300188/SiteIt_hiqloj.png" alt="IT" loading="lazy" /><span class="portfolio-tag">IT & Digital</span><div class="portfolio-overlay"><h4>Plateforme Corporate IT</h4><p>Site web premium pour entreprise technologique</p><a href="/cdn-cgi/l/email-protection#d1b2bebfa5b0b2a591b5b8b6b8a2a5b0a3a5b4a9a1a3b4a2a2ffb2bebc" class="btn btn-accent btn-sm">Résultat similaire</a></div></div>
-        <div class="portfolio-item reveal reveal-delay-1" data-category="mines"><img src="https://res.cloudinary.com/dlkow85gp/image/upload/v1768300187/SiteMines_a11bs6.png" alt="Mines" loading="lazy" /><span class="portfolio-tag">Mines</span><div class="portfolio-overlay"><h4>Portail Minier Institutionnel</h4><p>Présentation de capacités et certifications</p><a href="/cdn-cgi/l/email-protection#5b3834352f3a382f1b3f323c32282f3a292f3e232b293e282875383436" class="btn btn-accent btn-sm">Résultat similaire</a></div></div>
-        <div class="portfolio-item reveal reveal-delay-2" data-category="logistique"><img src="https://res.cloudinary.com/dlkow85gp/image/upload/v1768300189/SiteTransport_jzo6jx.png" alt="Transport" loading="lazy" /><span class="portfolio-tag">Logistique</span><div class="portfolio-overlay"><h4>Plateforme Logistique B2B</h4><p>Gestion de flotte et demandes de devis</p><a href="/cdn-cgi/l/email-protection#d4b7bbbaa0b5b7a094b0bdb3bda7a0b5a6a0b1aca4a6b1a7a7fab7bbb9" class="btn btn-accent btn-sm">Résultat similaire</a></div></div>
-        <div class="portfolio-item reveal" data-category="energie"><img src="https://res.cloudinary.com/dlkow85gp/image/upload/v1768300186/SiteSolaire_v4ritz.png" alt="Solaire" loading="lazy" /><span class="portfolio-tag">Énergie</span><div class="portfolio-overlay"><h4>Site Solaire Premium</h4><p>Présentation de projets et simulateur</p><a href="/cdn-cgi/l/email-protection#9af9f5f4eefbf9eedafef3fdf3e9eefbe8eeffe2eae8ffe9e9b4f9f5f7" class="btn btn-accent btn-sm">Résultat similaire</a></div></div>
-        <div class="portfolio-item reveal reveal-delay-1" data-category="btp"><img src="https://res.cloudinary.com/dlkow85gp/image/upload/v1768300185/SiteConstr_soqgrr.png" alt="BTP" loading="lazy" /><span class="portfolio-tag">BTP</span><div class="portfolio-overlay"><h4>Portail BTP Corporate</h4><p>Showcase de chantiers et références</p><a href="/cdn-cgi/l/email-protection#d2b1bdbca6b3b1a692b6bbb5bba1a6b3a0a6b7aaa2a0b7a1a1fcb1bdbf" class="btn btn-accent btn-sm">Résultat similaire</a></div></div>
-        <div class="portfolio-item reveal reveal-delay-2" data-category="it"><img src="https://res.cloudinary.com/dlkow85gp/image/upload/v1768300188/SitesRH_enmdzg.png" alt="RH" loading="lazy" /><span class="portfolio-tag">RH & Digital</span><div class="portfolio-overlay"><h4>Application RH Digitale</h4><p>Gestion de candidatures et talents</p><a href="/cdn-cgi/l/email-protection#d7b4b8b9a3b6b4a397b3beb0bea4a3b6a5a3b2afa7a5b2a4a4f9b4b8ba" class="btn btn-accent btn-sm">Résultat similaire</a></div></div>
+        <div class="portfolio-item reveal" data-category="it"><img src="https://res.cloudinary.com/dlkow85gp/image/upload/v1768300188/SiteIt_hiqloj.png" alt="IT" loading="lazy" /><span class="portfolio-tag">IT & Digital</span><div class="portfolio-overlay"><h4>Plateforme Corporate IT</h4><p>Site web premium pour entreprise technologique</p><a href="#tarifs" class="btn btn-accent btn-sm">Résultat similaire</a></div></div>
+        <div class="portfolio-item reveal reveal-delay-1" data-category="mines"><img src="https://res.cloudinary.com/dlkow85gp/image/upload/v1768300187/SiteMines_a11bs6.png" alt="Mines" loading="lazy" /><span class="portfolio-tag">Mines</span><div class="portfolio-overlay"><h4>Portail Minier Institutionnel</h4><p>Présentation de capacités et certifications</p><a href="#tarifs" class="btn btn-accent btn-sm">Résultat similaire</a></div></div>
+        <div class="portfolio-item reveal reveal-delay-2" data-category="logistique"><img src="https://res.cloudinary.com/dlkow85gp/image/upload/v1768300189/SiteTransport_jzo6jx.png" alt="Transport" loading="lazy" /><span class="portfolio-tag">Logistique</span><div class="portfolio-overlay"><h4>Plateforme Logistique B2B</h4><p>Gestion de flotte et demandes de devis</p><a href="#tarifs" class="btn btn-accent btn-sm">Résultat similaire</a></div></div>
+        <div class="portfolio-item reveal" data-category="energie"><img src="https://res.cloudinary.com/dlkow85gp/image/upload/v1768300186/SiteSolaire_v4ritz.png" alt="Solaire" loading="lazy" /><span class="portfolio-tag">Énergie</span><div class="portfolio-overlay"><h4>Site Solaire Premium</h4><p>Présentation de projets et simulateur</p><a href="#tarifs" class="btn btn-accent btn-sm">Résultat similaire</a></div></div>
+        <div class="portfolio-item reveal reveal-delay-1" data-category="btp"><img src="https://res.cloudinary.com/dlkow85gp/image/upload/v1768300185/SiteConstr_soqgrr.png" alt="BTP" loading="lazy" /><span class="portfolio-tag">BTP</span><div class="portfolio-overlay"><h4>Portail BTP Corporate</h4><p>Showcase de chantiers et références</p><a href="#tarifs" class="btn btn-accent btn-sm">Résultat similaire</a></div></div>
+        <div class="portfolio-item reveal reveal-delay-2" data-category="it"><img src="https://res.cloudinary.com/dlkow85gp/image/upload/v1768300188/SitesRH_enmdzg.png" alt="RH" loading="lazy" /><span class="portfolio-tag">RH & Digital</span><div class="portfolio-overlay"><h4>Application RH Digitale</h4><p>Gestion de candidatures et talents</p><a href="#tarifs" class="btn btn-accent btn-sm">Résultat similaire</a></div></div>
       </div>
-      <div style="text-align:center;margin-top:40px;" class="reveal"><a href="/cdn-cgi/l/email-protection#8be8e4e5ffeae8ffcbefe2ece2f8ffeaf9ffeef3fbf9eef8f8a5e8e4e6" class="btn btn-primary">Démarrer votre projet <i class="fa-solid fa-arrow-right"></i></a></div>
+      <div style="text-align:center;margin-top:40px;" class="reveal"><a href="#tarifs" class="btn btn-primary">Démarrer votre projet <i class="fa-solid fa-arrow-right"></i></a></div>
     </div>
   </section>
 
@@ -1116,7 +1127,7 @@
       </div>
 
       <div style="text-align:center;margin-top:40px;" class="reveal">
-        <a href="/cdn-cgi/l/email-protection#e3808c8d97828097a3878a848a9097829197869b9391869090cd808c8e" class="btn btn-primary">Lancer mon projet <i class="fa-solid fa-rocket"></i></a>
+        <a href="#tarifs" class="btn btn-primary">Lancer mon projet <i class="fa-solid fa-rocket"></i></a>
       </div>
     </div>
   </section>
@@ -1219,7 +1230,7 @@
             <li><i class="fa-solid fa-check"></i>Maintenance 3 mois</li>
             <li><i class="fa-solid fa-check"></i>Formation à la gestion du site</li>
           </ul>
-          <a href="/cdn-cgi/l/email-protection#1d7e7273697c7e695d79747a746e697c6f6978656d6f786e6e337e7270" class="btn btn-accent" style="width:100%;justify-content:center;">Démarrer maintenant</a>
+          <a href="https://wa.me/243988700603" class="btn btn-accent" style="width:100%;justify-content:center;">Démarrer maintenant</a>
         </div>
         <div class="pricing-card reveal reveal-delay-2">
           <h3>Applications web</h3>
@@ -1234,7 +1245,7 @@
             <li><i class="fa-solid fa-check" style="color:var(--accent)"></i>Hébergement cloud</li>
             <li><i class="fa-solid fa-check" style="color:var(--accent)"></i>Support technique 6 mois</li>
           </ul>
-          <a href="/cdn-cgi/l/email-protection#e98a86879d888a9da98d808e809a9d889b9d8c91999b8c9a9ac78a8684" class="btn btn-primary" style="width:100%;justify-content:center;">Démarrer maintenant</a>
+          <a href="https://wa.me/243988700603" class="btn btn-primary" style="width:100%;justify-content:center;">Démarrer maintenant</a>
         </div>
         <div class="pricing-card reveal reveal-delay-3">
           <h3>Applications mobiles</h3>
@@ -1249,13 +1260,13 @@
             <li><i class="fa-solid fa-check" style="color:var(--accent)"></i>Publication sur stores</li>
             <li><i class="fa-solid fa-check" style="color:var(--accent)"></i>Maintenance 6 mois</li>
           </ul>
-          <a href="/cdn-cgi/l/email-protection#5f3c30312b3e3c2b1f3b3638362c2b3e2d2b3a272f2d3a2c2c713c3032" class="btn btn-primary" style="width:100%;justify-content:center;">Démarrer maintenant</a>
+          <a href="https://wa.me/243988700603" class="btn btn-primary" style="width:100%;justify-content:center;">Démarrer maintenant</a>
         </div>
       </div>
       <div class="pricing-custom reveal">
         <p>Vous êtes en Afrique francophone ? Les tarifs sont adaptés à votre marché local. Contactez-nous pour un devis personnalisé.</p>
         <div style="display:flex;gap:14px;justify-content:center;flex-wrap:wrap;">
-          <a href="/cdn-cgi/l/email-protection#40232f2e3421233400242927293334213234253830322533336e232f2d" class="btn btn-primary">Demander un devis sous 48h <i class="fa-solid fa-envelope"></i></a>
+          <a href="mailto:contact@digistartexpress.com" class="btn btn-primary">Demander un devis sous 48h <i class="fa-solid fa-envelope"></i></a>
           <a href="https://wa.me/243988700603" target="_blank" class="btn btn-outline" style="color:var(--primary);border-color:var(--border);">WhatsApp <i class="fa-brands fa-whatsapp"></i></a>
         </div>
       </div>
@@ -1313,7 +1324,7 @@
         <h2>Parlez-nous de votre projet.<br /><span>Devis sous 48h.</span></h2>
         <p>Envoyez-nous votre brief — aussi précis ou vague soit-il. Nous vous revenons rapidement avec un plan clair, un prix fixe et une équipe prête à démarrer.</p>
         <div class="cta-btns">
-          <a href="/cdn-cgi/l/email-protection#aecdc1c0dacfcddaeecac7c9c7dddacfdcdacbd6dedccbdddd80cdc1c3" class="btn btn-accent">Écrire maintenant <i class="fa-solid fa-envelope"></i></a>
+          <a href="mailto:contact@digistartexpress.com" class="btn btn-accent">Écrire maintenant <i class="fa-solid fa-envelope"></i></a>
           <a href="https://wa.me/243988700603" target="_blank" class="btn btn-outline">WhatsApp <i class="fa-brands fa-whatsapp"></i></a>
         </div>
       </div>
@@ -1476,13 +1487,22 @@ function renderVersion(countryCode) {
 
   initJS();
 
-  // Initialiser la vidéo scroll de la version active
-  var videoId = isRDC ? 'heroVideo' : 'heroVideoIntl';
+  // Initialiser la vidéo scroll de la version active (desktop + mobile)
+  var isMobile = window.innerWidth <= 768;
+  var videoId     = isRDC ? (isMobile ? 'heroVideoMobile'     : 'heroVideo')
+                          : (isMobile ? 'heroVideoIntlMobile'  : 'heroVideoIntl');
   if (document.readyState === 'complete') {
     initScrollVideo(videoId);
   } else {
     window.addEventListener('load', function() { initScrollVideo(videoId); });
   }
+  // Réinitialise si l'orientation change (portrait ↔ paysage)
+  window.addEventListener('resize', function() {
+    var nowMobile = window.innerWidth <= 768;
+    var newId = isRDC ? (nowMobile ? 'heroVideoMobile'     : 'heroVideo')
+                      : (nowMobile ? 'heroVideoIntlMobile'  : 'heroVideoIntl');
+    initScrollVideo(newId);
+  });
 }
 
 document.getElementById('geoClose').addEventListener('click', function() {
