ajout loc + video+ lien etr+email

--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
       </div>
       <div class="pricing-custom reveal">
         <p>Besoin d'une solution personnalisée ? Contactez-nous pour un devis sur mesure adapté à vos besoins spécifiques.</p>
-        <a href="/cdn-cgi/l/email-protection#761519180217150236121f111f0502170402130e06041305055815191b" class="btn btn-primary">Demander un devis <i class="fa-solid fa-envelope"></i></a>
+        <a href="mailto:contact@digistartexpress.com" class="btn btn-primary">Demander un devis <i class="fa-solid fa-envelope"></i></a>
       </div>
     </div>
   </section>
@@ -638,7 +638,7 @@
         <p>Ne laissez pas vos concurrents capter la confiance, les contrats et la visibilité avant vous. Agissez maintenant et transformez votre présence digitale en avantage stratégique.</p>
         <div class="cta-btns">
           <a href="https://wa.me/243988700603" target="_blank" class="btn btn-accent">Commander maintenant <i class="fa-brands fa-whatsapp"></i></a>
-          <a href="/cdn-cgi/l/email-protection#ec8f8382988d8f98ac88858b859f988d9e9889949c9e899f9fc28f8381" class="btn btn-outline">Nous écrire <i class="fa-solid fa-envelope"></i></a>
+          <a href="mailto:contact@digistartexpress.com" class="btn btn-outline">Nous écrire <i class="fa-solid fa-envelope"></i></a>
         </div>
       </div>
     </div>
