ajout loc + video+ lien etr+email2

--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
         <p>Votre partenaire pour des solutions digitales premium qui transforment votre présence en ligne en avantage concurrentiel.</p>
         <div class="footer-contacts">
           <div class="footer-contact"><i class="fa-solid fa-phone"></i><span>+243 98 870 0603</span></div>
-          <div class="footer-contact"><i class="fa-solid fa-envelope"></i><span><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="4e2d21203a2f2d3a0e2a2729273d3a2f3c3a2b363e3c2b3d3d602d2123">[email&#160;protected]</a></span></div>
+          <div class="footer-contact"><i class="fa-solid fa-envelope"></i><span><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="4e2d21203a2f2d3a0e2a2729273d3a2f3c3a2b363e3c2b3d3d602d2123">contact@digistartexpress.com</a></span></div>
           <div class="footer-contact"><i class="fa-solid fa-location-dot"></i><span>Kinshasa, République Démocratique du Congo</span></div>
         </div>
       </div>
